--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -797,4 +797,5 @@
     <string name="updating_share_failed">Updating share failed</string>
     <string name="whats_new_device_credentials_title">Use Android device protection</string>
     <string name="whats_new_device_credentials_content">Use anything like a pattern, password, pin or your fingerprint to keep your data safe.</string>
+    <string name="feedback_no_mail_app">No app available to send mails!</string>
 </resources>
